@@ -21,6 +21,7 @@ Ubercart Addresses 7.x-1.x, xxxx-xx-xx
 - Issue #1831424 by MegaChriz: added Entity integration.
 - Issue #1900150 by MegaChriz: added Views address access filters.
 - Issue #1910626 by MegaChriz: API change: specified field data types.
+- Issue #1900176 by MegaChriz: added Views address action links.
 
 Ubercart Addresses 7.x-1.0-alpha1, 2012-10-11
 ------------------------------
